Fix mobile overflow and cookie message.

--- a/src/scss/_components/_home.scss
+++ b/src/scss/_components/_home.scss
@@ -6,13 +6,13 @@
 	height: 100vh;
 	max-height: 100vh;
 	@media screen and (max-width: 767px) and (max-height: 699px) {
-		overflow-y: auto;
+		overflow: unset;
 	}
 	@media screen and (max-width: 639px) {
-		overflow-y: auto;
+		overflow: unset;
 	}
 	@media screen and (orientation: landscape) and (max-width: 812px) {
-		overflow-y: auto;
+		overflow: unset;
 	}
 
 	&__wrapper {
@@ -82,6 +82,7 @@
 			height: calc(100vh - 187px);
 		}
 		@media screen and (max-width: 639px) {
+			overflow: hidden;
 			transform: translateY(0);
 			max-width: 100%;
 			height: auto;
@@ -89,6 +90,7 @@
 			padding-right: 15px;
 		}
 		@media screen and (orientation: landscape) and (max-width: 812px) {
+			overflow: hidden;
 			transform: translateY(0);
 			max-width: 100%;
 			height: auto;
@@ -195,6 +197,11 @@
 
 			img {
 				top: 0;
+				@include adaptive(575) {
+					display: block;
+					max-width: 100%;
+					height: auto;
+				}
 			}
 
 			> div {
@@ -283,6 +290,16 @@
 		&:hover {
 			background-color: #235f25;
 			@include transition(background-color);
+			@include adaptive(767) {
+				background-color: #41ad4a;
+			}
+		}
+
+		&:active {
+			@include adaptive(767) {
+				background-color: #235f25;
+				@include transition(background-color);
+			}
 		}
 
 		&-wrapper {
