--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -64,11 +64,27 @@
 		&:hover {
 			background-color: rgba(#41ad4a, 0.75);
 			@include transition(background-color);
+			@include adaptive(767) {
+				background-color: #dbd1b6;
+			}
+		}
+
+		&:active {
+			@include adaptive(767) {
+				background-color: rgba(#41ad4a, 0.75);
+				@include transition(background-color);
+			}
 		}
 
 		&.is-active {
 			background-color: #41ad4a;
 			@include transition(background-color);
+
+			&:hover {
+				@include adaptive(767) {
+					background-color: #41ad4a;
+				}
+			}
 		}
 	}
 }
@@ -189,22 +205,22 @@
 	z-index: 1000;
 	position: fixed;
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 	justify-content: space-between;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	min-height: 130px;
-	padding-left: 50px;
-	padding-right: 50px;
+	padding: 15px 50px;
 	background-color: rgba(#235f25, 0.90);
 	@include adaptive(767) {
-		//padding: 15px 30px;
+		padding-left: 30px;
+		padding-right: 30px;
 	}
 	@include adaptive(639) {
-		//flex-direction: column;
-		//align-items: center;
-		//justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 	}
 
 	&__left {
@@ -213,7 +229,7 @@
 		max-width: 100%;
 		padding-right: 15px;
 		@include adaptive(639) {
-			//padding-right: 0;
+			padding-right: 0;
 		}
 	}
 
@@ -223,7 +239,7 @@
 		width: 100%;
 		max-width: 165px;
 		@include adaptive(639) {
-			//justify-content: center;
+			justify-content: center;
 		}
 	}
 
@@ -234,11 +250,11 @@
 		color: #ffffff;
 		font-size: 18px;
 		@include adaptive(639) {
-			//font-size: 14px;
+			font-size: 16px;
 		}
 		@include adaptive(639) {
-			//text-align: center;
-			//padding-bottom: 15px;
+			text-align: center;
+			padding-bottom: 15px;
 		}
 	}
 
@@ -258,8 +274,9 @@
 		font-family: 'Frankfurter', sans-serif;
 		@include transition(background-color, color);
 		@include adaptive(639) {
-			//font-size: 22px;
-			//max-width: 135px;
+			font-size: 22px;
+			max-width: 135px;
+			height: 43px;
 		}
 
 		&:hover {
